Fixed Button Layout Issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ padding-left: 2%;
 }
 
 .event-button-group{
-    margin-top: %;
+    margin-top: 5%;
 }
 
 .event-join--button{
